# phone-number-scan

./: .gitignore  README.md  generate_test_files.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/phone_number_scan/: __init__.py  __main__.py
tests/: test_conversion.py
